// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders with messages 1`] = `
<div
  className="rs-panel"
>
  <div
    aria-controls={null}
    className="rs-panel-header"
    tabIndex={-1}
  >
    <h3
      className="rs-panel-title"
    >
      Test thread
    </h3>
  </div>
  <div
    className="rs-panel-body"
    role="region"
  >
    <div
      className="rs-panel-group"
    >
      <div
        className="rs-panel"
      >
        <div
          className="rs-panel-body"
          role="region"
        >
          <main
            className="rs-content"
          >
            <div
              className="rs-flex-box-grid rs-flex-box-grid-top rs-flex-box-grid-start"
            >
              <div
                className="rs-flex-box-grid-item rs-flex-box-grid-item-0"
              >
                <div
                  className="mr-3 rs-avatar rs-avatar-lg"
                  title="Test user"
                >
                  Tu
                </div>
              </div>
              <div
                className="rs-flex-box-grid-item rs-flex-box-grid-item-0"
              >
                <p>
                  2020-03-02T00:00:00.000Z
                </p>
                <p>
                  First !!!
                </p>
              </div>
            </div>
          </main>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders with new message box 1`] = `
<div
  className="rs-panel"
>
  <div
    aria-controls={null}
    className="rs-panel-header"
    tabIndex={-1}
  >
    <h3
      className="rs-panel-title"
    >
      Test thread
    </h3>
  </div>
  <div
    className="rs-panel-body"
    role="region"
  >
    <div
      className="rs-panel-group"
    >
      <div
        className="rs-panel"
      >
        <div
          className="rs-panel-body"
          role="region"
        >
          <main
            className="rs-content"
          >
            <div
              className="rs-flex-box-grid rs-flex-box-grid-top rs-flex-box-grid-start"
            >
              <div
                className="rs-flex-box-grid-item rs-flex-box-grid-item-0"
              >
                <div
                  className="mr-3 rs-avatar rs-avatar-lg"
                  title="Test user"
                >
                  Tu
                </div>
              </div>
              <div
                className="rs-flex-box-grid-item rs-flex-box-grid-item-0"
              >
                <p>
                  2020-03-02T00:00:00.000Z
                </p>
                <p>
                  First !!!
                </p>
              </div>
            </div>
          </main>
        </div>
      </div>
      <div
        className="rs-panel"
      >
        <div
          className="rs-panel-body"
          role="region"
        >
          <div
            className="mb-3"
          >
            <div
              className="rs-nav rs-nav-subtle rs-nav-horizontal"
            >
              <a
                aria-selected={true}
                className="preview-strip-1 rs-nav-item rs-nav-item-active"
                href="#"
                onClick={[Function]}
                role="button"
              >
                Text
                <span
                  className="rs-ripple-pond"
                >
                  <span
                    className="rs-ripple"
                  />
                </span>
              </a>
              <a
                className="preview-strip-2 rs-nav-item"
                href="#"
                onClick={[Function]}
                role="button"
              >
                Preview
                <span
                  className="rs-ripple-pond"
                >
                  <span
                    className="rs-ripple"
                  />
                </span>
              </a>
              <div
                className="rs-nav-bar"
              />
            </div>
            <textarea
              className="rs-input"
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Enter message..."
              rows={10}
              style={
                Object {
                  "resize": "both",
                }
              }
              type="text"
              value=""
            />
          </div>
          <button
            className="rs-btn rs-btn-primary"
            onClick={[Function]}
            type="button"
          >
            Submit
            <span
              className="rs-ripple-pond"
            >
              <span
                className="rs-ripple"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders with no messages 1`] = `
<div
  className="rs-panel"
>
  <div
    aria-controls={null}
    className="rs-panel-header"
    tabIndex={-1}
  >
    <h3
      className="rs-panel-title"
    >
      Test thread
    </h3>
  </div>
  <div
    className="rs-panel-body"
    role="region"
  >
    <div
      className="rs-panel-group"
    />
  </div>
</div>
`;
